<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.vylo.common.widget.MainNavigationBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/focus_wrapper"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <com.vylo.common.widget.TitleDescView
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_size_medium_small_mid_small"
        android:layout_marginTop="@dimen/margin_padding_size_xxlarge_mid"
        app:desc_color="@color/secondary"
        app:desc_hint="@string/label_current_password_hint"
        app:desc_hint_text_size="@dimen/text_size_micro_mid"
        app:desc_text_size="@dimen/text_size_small"
        app:title="@string/label_current_password"
        app:title_color="@color/primary"
        app:title_width="@dimen/container_150"
        app:visibility_label="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/half_one"
        android:layout_marginTop="@dimen/margin_padding_size_medium_small_mid_small"
        android:background="@color/dark_grey" />

    <com.vylo.common.widget.TitleDescView
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_size_medium_small_mid_small"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        app:desc_color="@color/secondary"
        app:desc_hint="@string/label_new_password_hint"
        app:desc_hint_text_size="@dimen/text_size_micro_mid"
        app:desc_text_size="@dimen/text_size_small"
        app:title="@string/label_new_password"
        app:title_color="@color/primary"
        app:title_width="@dimen/container_150"
        app:visibility_label="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/half_one"
        android:layout_marginTop="@dimen/margin_padding_size_medium_small_mid_small"
        android:background="@color/dark_grey" />

    <com.vylo.common.widget.TitleDescView
        android:id="@+id/re_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_size_medium_small_mid_small"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        app:desc_color="@color/secondary"
        app:desc_hint="@string/label_confirm_password_hint"
        app:desc_hint_text_size="@dimen/text_size_micro_mid"
        app:desc_text_size="@dimen/text_size_small"
        app:title="@string/label_confirm_password"
        app:title_color="@color/primary"
        app:title_width="@dimen/container_150"
        app:visibility_label="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/half_one"
        android:layout_marginTop="@dimen/margin_padding_size_medium_small_mid_small"
        android:background="@color/dark_grey" />

</androidx.appcompat.widget.LinearLayoutCompat>