<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:orientation="vertical">

    <com.vylo.common.widget.MainNavigationBar
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/focus_wrapper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <VideoView
        android:id="@+id/video_player"
        android:layout_width="@dimen/container_178"
        android:layout_height="@dimen/container_178"
        android:layout_marginStart="@dimen/margin_padding_size_large_small"
        android:layout_marginTop="@dimen/margin_padding_size_medium_small_mid_small" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_head"
        style="@style/MainText.H5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_large_pre_small_mid"
        android:layout_marginTop="@dimen/margin_padding_size_large_pre_mid"
        android:paddingBottom="@dimen/margin_padding_size_small_mid"
        android:text="@string/label_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/title_body"
        style="@style/MainEditText.InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_size_large_pre_small_mid"
        android:hint="@string/label_title_body" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/desc_head"
        style="@style/MainText.H5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_large_pre_small_mid"
        android:layout_marginTop="@dimen/margin_padding_size_medium_mid_mid_half"
        android:paddingBottom="@dimen/margin_padding_size_small_mid"
        android:text="@string/label_description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/desc_body"
        style="@style/MainText.H8_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_large_pre_small_mid"
        android:text="@string/label_description_body" />

</androidx.appcompat.widget.LinearLayoutCompat>